# iot-app

./: Dockerfile  Makefile  README.md  client.py  pyproject.toml  read_modbus.json
src/: modbus_server.py  mqtt_server.py
